2016-12-22      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.10
        * cursescfg: Changed to improve contrast.

2016-12-20      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.9
        * anonymine_engine.py (game_engine.play_game): "time taken to play"
            was calculated after the "Press the any key" screen.
        * anonymine.py (curses_game):
            - Added KeyError to curses_output_cfg
            - Moved print_char below move_visbile area
            - Use new function print_digit to print the digits
              (multiple colors)
        * cursescfg:
            - Different colors for different digits
            - Reverse video for mines

2016-12-19      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.8
        * configure.py, Makefile.static, INSTALL: Don't install modules
            for the other Python version. Removed $(MODULES_OTHERVER).
        * Makefile.static (build-freedesktop, build-macosx): Use Makefile as
            a Makefile.
        * Makefile.static (all etc), mk-symlinks: New file mk-symlinks that
            creates $(builddir)symlinks which creates the symlinks using a
            new method.
        * configure, configure.py, Makefile.static ($(MAIN_STAGE)), INSTALL:
            Use PyPy is possible; New Makefile variable: $(python);
            ./reconfigure will use sys.executable.

2016-12-18      Oskar Skog      <oskar.skog.finland@gmail.com>
    0.4.7
        * Makefile.static:
            - Use "$(MAKE)" instead of "make".
            - Made print-destinations print to stderr.
        * configure.py: Remade find_MODULES.
        * INSTALL: Many small corrections.
        * Makefile.static:
            - Made recursive make wrapper for install-dirs
            - `make install` depends on the internal targets.
              (Avoids unnecessary recursions.)
            - $(MAIN_STAGE) now depends on Makefile.vars too.
            - $(ENGINECFG_STAGE) now depends on Makefile.vars.